- Patch #337947 by codycraven, cwgordon7, axyjo, Jacine, grndlvl, seutje, ksenzee, Jaza, chx, sun, JacobSingh, yoroy, peximo: fixed whitespace issue for 'recent content block' in dashboard.

--- a/modules/dashboard/dashboard.css
+++ b/modules/dashboard/dashboard.css
@@ -153,8 +153,6 @@
 #dashboard #block-node-recent tr {
   border: none;
 }
-
-#dashboard .list-all {
-  text-align: right;
-  margin: 0 10px 0 0;
+#dashboard #block-node-recent .content {
+  padding: 0;
 }
